--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-</head>
-<body>
-    <h1>Hello Blog!</h1>
-</body>
-</html>
+<%- include('header'); %>
+<h1>Hello all</h1>
+<%- include('footer'); %>
