--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,21 +1,8 @@
 <%- include('../header'); %>
 
 <h1>Nowy post</h1>
-<form action="/post" method="POST">
-    <div class="form-group col-8">
-        <label for="title">Tytuł:</label>
-        <input required type="text" name="title" class="form-control" value="<%= post.title %>">
-        <div><%= error.title %></div>
-    </div>
-    <div class="form-group col-8">
-        <label for="description">Treść:</label>
-        <textarea required name="description" id="" cols="30" rows="10" class="form-control"><%= post.description %></textarea>
-        <div><%= error.description %></div>
-    </div>
-    <div class="mt-2">
-        <button type="submit" class="btn btn-primary">Zapisz</button>
-        <a href="/" class="btn btn-primary">Anuluj</a>
-    </div>
+<form action="" method="POST">
+    <%- include('./_form_fields') %>
 </form>
 
 <%- include('../footer'); %>
